--- a/website/templates/main.html
+++ b/website/templates/main.html
@@ -12,20 +12,20 @@
 
 <div class="container">
 <br><br><br><br>
-<img src="./singaporeflag.jpg" style="width:100px;height:100px;">
-  <img src="./chinaflag.jpg" style="width:100px;height:100px;">
-  <img src="./dutchflag.jpg" style="width:100px;height:100px;">
-  <img src="./egyptflag.jpg" style="width:100px;height:100px;">
+  <img src="./singaporeflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
+  <img src="./chinaflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
+  <img src="./dutchflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
+  <img src="./egyptflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
 <br>
-  <img src="./italyflag1.jpg" style="width:100px;height:100px;">
-  <img src="./japanflag.jpg" style="width:100px;height:100px;">
-  <img src="./malaysiaflag.jpg" style="width:100px;height:100px;">
-  <img src="./russiaflag.jpg" style="width:100px;height:100px;">
+  <img src="./italyflag1.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
+  <img src="./japanflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
+  <img src="./malaysiaflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
+  <img src="./russiaflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
   <br>
-  <img src="./spainflag.jpg" style="width:100px;height:100px;">
-  <img src="./turkyflag.jpg" style="width:100px;height:100px;">
-  <img src="./UKflag.jpg" style="width:100px;height:100px;">
-  <img src="./USflag.jpg" style="width:100px;height:100px;">
+  <img src="./spainflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
+  <img src="./turkyflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
+  <img src="./UKflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
+  <img src="./USflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
   <br><br>
 <h2>Kopi-CTP Challenge, come and get the flag!!!!!</h2>
 <p>Welcome, and have fun!</p>
