--- a/website/templates/main.html
+++ b/website/templates/main.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container">
-<br><br><br><br>
+<br><br>
   <img src="./singaporeflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
   <img src="./chinaflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
   <img src="./dutchflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
@@ -36,7 +36,7 @@
   <form action="/search">
     <div class="form-group">
       <label for="term">Update user information:</label>
-      <input type="text" name="term" class="form-control" id="term" placeholder="Enter term">
+      <input type="text" name="term" class="form-control" id="term">
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
   </form> {{error}}
