--- a/submit/answer/website/templates/main.html
+++ b/submit/answer/website/templates/main.html
@@ -17,7 +17,7 @@
   <img src="./dutchflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
   <img src="./egyptflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
 <br>
-  <img src="./italyflag1.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
+  <img src="./italyflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
   <img src="./japanflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
   <img src="./malaysiaflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
   <img src="./russiaflag.jpg" style="width:166px;height:100px;border: #FFFFFF 4px solid;">
